MAINTAINERCLEANFILES=Makefile.in
ACLOCAL_AMFLAGS=-I m4

AM_YFLAGS=-d

lib_LTLIBRARIES=libcarbon-1.0.la
libcarbon_1_0_ladir=$(includedir)/carbon-1.0

libcarbon_1_0_la_CO2SOURCES=\
ArgumentDeclaration.co2\
ArrayType.co2\
BaseCompileObjectVisitor.co2\
BinaryExpression.co2\
BreakStatement.co2\
CaseStatement.co2\
CastExpression.co2\
CatchStatement.co2\
ClassDeclaration.co2\
CompileObject.co2\
CompileObjectVisitor.co2\
CompoundStatement.co2\
ConditionalBinaryExpression.co2\
ConditionalExpression.co2\
ConstructorDeclaration.co2\
Context.co2\
ContinueStatement.co2\
Declaration.co2\
DeleteStatement.co2\
DestructorDeclaration.co2\
DoStatement.co2\
error.co2\
Expression.co2\
ExpressionStatement.co2\
File.co2\
FinallyStatement.co2\
ForEachStatement.co2\
ForStatement.co2\
FunctionCallExpression.co2\
FunctionDeclaration.co2\
FunctionType.co2\
GenerateHeaderIncludesVisitor.co2\
GenerateHeaderVisitor.co2\
GenerateSourceIncludesVisitor.co2\
GenerateSourceVisitor.co2\
Hash.co2\
HelloWorldVisitor.co2\
IfStatement.co2\
IncludeStack.co2\
InterfaceDeclaration.co2\
io.co2\
IsOfExpression.co2\
MacroDeclaration.co2\
NestedExpression.co2\
NewExpression.co2\
NullExpression.co2\
ObjectType.co2\
ObjectTypeDeclaration.co2\
Path.co2\
PrimitiveType.co2\
RefList.co2\
ReturnStatement.co2\
Scope.co2\
Set.co2\
SizeExpression.co2\
Statement.co2\
StructDeclaration.co2\
SuperExpression.co2\
SwitchStatement.co2\
ThrowStatement.co2\
Token.co2\
TokenExpression.co2\
TokenGenerator.co2\
TryStatement.co2\
TypeCheckVisitor.co2\
Type.co2\
TypeDeclaration.co2\
UnaryExpression.co2\
VarArgExpression.co2\
VariableDeclaration.co2\
WhileStatement.co2

libcarbon_1_0_la_SOURCES=\
$(libcarbon_1_0_la_CO2SOURCES)\
grammar.y\
lex.l\
ArgumentDeclaration.c\
ArrayType.c\
BaseCompileObjectVisitor.c\
BinaryExpression.c\
BreakStatement.c\
CaseStatement.c\
CastExpression.c\
CatchStatement.c\
ClassDeclaration.c\
CompileObject.c\
CompileObjectVisitor.c\
CompoundStatement.c\
ConditionalBinaryExpression.c\
ConditionalExpression.c\
ConstructorDeclaration.c\
Context.c\
ContinueStatement.c\
Declaration.c\
DeleteStatement.c\
DestructorDeclaration.c\
DoStatement.c\
error.c\
Expression.c\
ExpressionStatement.c\
File.c\
FinallyStatement.c\
ForEachStatement.c\
ForStatement.c\
FunctionCallExpression.c\
FunctionDeclaration.c\
FunctionType.c\
GenerateHeaderIncludesVisitor.c\
GenerateHeaderVisitor.c\
GenerateSourceIncludesVisitor.c\
GenerateSourceVisitor.c\
Hash.c\
HelloWorldVisitor.c\
IfStatement.c\
InterfaceDeclaration.c\
io.c\
IsOfExpression.c\
MacroDeclaration.c\
NestedExpression.c\
NewExpression.c\
NullExpression.c\
ObjectType.c\
ObjectTypeDeclaration.c\
Path.c\
PrimitiveType.c\
RefList.c\
ReturnStatement.c\
Scope.c\
Set.c\
SizeExpression.c\
Statement.c\
StructDeclaration.c\
SuperExpression.c\
SwitchStatement.c\
ThrowStatement.c\
Token.c\
TokenExpression.c\
TokenGenerator.c\
TryStatement.c\
TypeCheckVisitor.c\
Type.c\
TypeDeclaration.c\
UnaryExpression.c\
VarArgExpression.c\
VariableDeclaration.c\
WhileStatement.c

libcarbon_1_0_la_HEADERS=\
ArgumentDeclaration.h\
ArrayType.h\
BaseCompileObjectVisitor.h\
BinaryExpression.h\
BreakStatement.h\
CaseStatement.h\
CastExpression.h\
CatchStatement.h\
ClassDeclaration.h\
CompileObject.h\
CompileObjectVisitor.h\
CompoundStatement.h\
ConditionalBinaryExpression.h\
ConditionalExpression.h\
ConstructorDeclaration.h\
Context.h\
ContinueStatement.h\
Declaration.h\
DeleteStatement.h\
DestructorDeclaration.h\
DoStatement.h\
error.h\
Expression.h\
ExpressionStatement.h\
File.h\
FinallyStatement.h\
ForEachStatement.h\
ForStatement.h\
FunctionCallExpression.h\
FunctionDeclaration.h\
FunctionType.h\
GenerateHeaderIncludesVisitor.h\
GenerateHeaderVisitor.h\
GenerateSourceIncludesVisitor.h\
GenerateSourceVisitor.h\
Hash.h\
HelloWorldVisitor.h\
IfStatement.h\
IncludeStack.h\
InterfaceDeclaration.h\
io.h\
IsOfExpression.h\
MacroDeclaration.h\
NestedExpression.h\
NewExpression.h\
NullExpression.h\
ObjectType.h\
ObjectTypeDeclaration.h\
Path.h\
PrimitiveType.h\
RefList.h\
ReturnStatement.h\
Scope.h\
Set.h\
SizeExpression.h\
Statement.h\
StructDeclaration.h\
SuperExpression.h\
SwitchStatement.h\
ThrowStatement.h\
Token.h\
TokenExpression.h\
TokenGenerator.h\
TryStatement.h\
TypeCheckVisitor.h\
Type.h\
TypeDeclaration.h\
UnaryExpression.h\
VarArgExpression.h\
VariableDeclaration.h\
WhileStatement.h

%.c: %.co2
	-rm $@
	carbon -P ../../co2-base/carbon -P ../../co2-base/carbon/co2 $< $@

%.h: %.c

grammar.h: grammar.c

libcarbon_1_0_la_CPPFLAGS=-O0 -g3

bin_PROGRAMS=carbon
carbon_SOURCES=Compiler.co2 Compiler.c
carbon_LDADD=libcarbon-1.0.la
carbon_LDFLAGS=$(CO2_LIBS) $(CO2BASE_LIBS)

distclean-local:
	-rm -r ${bin_PROGRAMS}

clean-local:
	-rm grammar.c grammar.h lex.c
