library_includedir=$(includedir)/carbon-1.0/co2
library_include_HEADERS = co2/ArgumentDeclaration.h co2/ArrayType.h co2/BaseCompileObjectVisitor.h\
		co2/BinaryExpression.h\
		co2/CastExpression.h co2/CatchStatement.h co2/ClassDeclaration.h\
		co2/CompileObject.h co2/CompileObjectVisitor.h co2/Compiler.h\
		co2/CompoundStatement.h\
		co2/ConstructorDeclaration.h co2/Context.h co2/Declaration.h co2/DeleteStatement.h\
		co2/DestructorDeclaration.h co2/DoStatement.h co2/error.h co2/Expression.h\
		co2/ExpressionStatement.h co2/GenerateHeaderVisitor.h\
		co2/GenerateSourceVisitor.h co2/File.h\
		co2/ForEachStatement.h co2/ForStatement.h\
		co2/FunctionType.h co2/FunctionDeclaration.h co2/FunctionCallExpression.h\
		co2/HelloWorldVisitor.h\
		co2/IfStatement.h co2/IncludeStack.h co2/InterfaceDeclaration.h co2/io.h\
		co2/MacroDeclaration.h co2/NewExpression.h co2/NestedExpression.h\
		co2/NullExpression.h co2/ObjectType.h co2/ObjectTypeDeclaration.h co2/Path.h\
		co2/PrimitiveType.h co2/RefList.h co2/ReturnStatement.h co2/Scope.h\
		co2/SizeExpression.h co2/Statement.h co2/StructDeclaration.h co2/SuperExpression.h\
		co2/ThrowStatement.h co2/Token.h co2/TokenExpression.h co2/TokenGenerator.h\
		co2/TryStatement.h co2/Type.h co2/TypeCheckVisitor.h co2/TypeDeclaration.h\
		co2/UnaryExpression.h\
		co2/VarArgExpression.h co2/VariableDeclaration.h co2/WhileStatement.h

